...
                verticalAlignment = Alignment.CenterVertically,
                horizontalArrangement = Arrangement.SpaceBetween,
            ) {
                Button(
                    modifier = Modifier.padding(start = 16.dp),
                    onClick = filterState.reset,
                ) { Text("Reset") }
                Button(
                    modifier = Modifier.padding(start = 16.dp),
                    onClick = filterState.apply,
                ) { Text("Apply") }
            }
        }
...
@Composable
fun ArticleFilterActionIcon(
    modifier: Modifier = Modifier,
    filterState: ArticlesFilterEditorState,
) {
    IconButton(
        modifier = modifier.testTag("ArticleFilter"),
        onClick = filterState.show,
    ) {
        Box {
            if (filterState.isSet) {
                Box(
                    modifier = Modifier
...
