...
                    maxLines = 1,
                    overflow = TextOverflow.Ellipsis,
                )
            },
            navigationIcon = {
                IconButton(
                    modifier = Modifier.testTag("Close"),
                    onClick = { onNavigateBack() },
                ) {
                    Icon(imageVector = Icons.Default.Close, null)
                }
            },
        )
...
